--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<title>Belajar Git - Project 01</titl> 
     </head>
     <body>
-        <p>Hello Semua, Saya sedang belajar Git</p>
+        <p>Hai Semua, Saya sedang belajar Git</p>
     </body>
 </html
