--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8"> 
-	<title>Belajar Git - Project 01</titl> 
+	<title>Belajar Git - Project 01</title> 
     </head>
     <body>
         <p>Hello Semua, Saya sedang belajar Git</p>
+	<p>Semangat belajar git repository Git</p>
     </body>
 </html
